# VCFGrafana

./: .env.example  .gitignore  README.md  install.sh  prometheus-vcenter.example.yaml  pyproject.toml  requirements.txt  setup.py
dashboards/: README.md  provisioning.yaml  vcenter-clusters.json  vcenter-host-metrics.json  vcenter-host-performance.json  vcenter-hosts.json  vcenter-overview.json  vcenter-storage.json  vcenter-vm-metrics.json  vcenter-vm-performance.json  vcenter-vms.json  vcenter-vsan.json
vcenter_exporter/: __init__.py  collector.py  config.py  main.py  perf_manager.py  vcenter_client.py  vsan_manager.py
